--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
         <div class="head"><p>my cart</p></div>
         <div>
             <div id="cartItem">Your cart is empty</div>
-            <form action="/sendData" method="post" id="userForm">
+            <form action="/submit-form" method="post" id="userForm">
             <label for="Name">Your Name</label>
             <input type="text" placeholder="Name" name="Name" required>
             <label for="Name">Your E-mail</label>
@@ -76,7 +76,7 @@
 
         // You can now use 'formData' to send the data to the server or perform other actions
         // For example, you can use fetch() to send the data to a server endpoint:
-        fetch("/sendData", {
+        fetch("/submit-form", {
             method: "POST",
             body: formData,
         })
@@ -86,11 +86,11 @@
                 console.log("Form data submitted successfully!");
             } else {
                 // Handle errors (e.g., show an error message)
-                console.error("Error submitting form data.");
+                console.log("Error submitting form data.");
             }
         })
         .catch((error) => {
-            console.error("An error occurred:", error);
+            console.log("An error occurred:", error);
         });
     });
 </script>
