--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,10 @@
    <!-- <h1 class="p"><strong>PATRICA ELECTRONIC CENTRE</strong></h1>  -->
 
 <div class="data">
-<div class="top">
+<!-- <div class="top">
     <p>+256772270414</p>
     <p>mikendizihiwe@gmail.com</p>
-</div>
+</div> -->
 <div class="header">
     <p>BUY EVERY THING ONLINE</p>
     <div class="cart"><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><p id="count">0</p></a></div>
