--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-<link rel="icon" href="IMG_E0376.JPG" type="image/x-icon">
-
+    <link rel="icon" href="IMG_E0376.JPG" type="image/x-icon">
     <link rel="icon" href="public/favicon.ico">
     <title>TRICIA SCENTED SECRETS</title>
     <style>
@@ -14,17 +13,11 @@
             font-family: 'Times New Roman', Times, serif;
             background-color: red;
         }
-        /* img{
-            float: 1;
-            align-self: center;
-            height: 150px;
-            width: 200px;
-        } */
+       
     </style>
     <script src="https://kit.fontawesome.com/b8c51a70ab.js" crossorigin="anonymous"></script>
 </head>
 <body>
-   <!-- <h1 class="p"><strong>PATRICA ELECTRONIC CENTRE</strong></h1>  -->
 
 <div class="data">
 <!-- <div class="top">
@@ -33,7 +26,7 @@
 </div> -->
 <div class="header">
     <p>BUY EVERY THING ONLINE</p>
-    <div class="cart"><a href="./cart.html"><i class="fa-solid fa-cart-shopping"></i><p id="count">0</p></a></div>
+    <div class="cart"><a href=""><i class="fa-solid fa-cart-shopping"></i><p id="count">0</p></a></div>
 </div>
 <div class="searchbar">
     <input type="text" placeholder="search..." id="searchBar" name="searchBar">
