--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,27 @@
           font-size: 35px;
           text-align: center;
         }
+         /* Media Queries for different devices */
+    /* Smartphones */
+    @media (max-width: 600px) {
+      .container {
+        background-color: lightblue;
+      }
+    }
+
+    /* Tablets and small desktops */
+    @media (min-width: 601px) and (max-width: 992px) {
+      .container {
+        background-color: lightgreen;
+      }
+    }
+
+    /* Larger desktops */
+    @media (min-width: 993px) {
+      .container {
+        background-color: lightcoral;
+      }
+    }
        
     </style>
     <script src="https://kit.fontawesome.com/b8c51a70ab.js" crossorigin="anonymous"></script>
